--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<title>HTML Basic </title>
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<title>HTML Basic </title>
+	</head>
 
-<body>
-	<a href="">Homepage</a>
+	<body>
+		<header>
+			<ul>
+				<li><a href="./index.html">Homepage</a></li>
+			</ul>
+		</header>
+		<main>
+			<article>
+				<h3>Markup Language</h3>
+				<p>HTML is the language for describing the structure of web pages.</p>
+				<br>
+				<a href="www.github.com">GitHub<a>
+			</article>
+			<aside>
+				<p>The <a> tag defines hyperlink, which is used to link from one page to another.</p>
+			</aside>
+		</main>
+		<footer>
+			<p>HTML is amazing. Made by Erica-Livia Ingabire - <a href="www.netflix.com" target="_blank">here</a></p>
+		</footer>
 
-</body>
+	</body>
 </html>
