--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<title>HTML Basic </title>
-</head>
 
-<body>
-</body>
+	<head>
+	
+		<meta charset="UTF-8">
+		<title>HTML Basic </title>
+	</head>
+
+
+	<body>
+		<p>Hello</p>
+	</body>
 </html>
