--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -1,46 +1,37 @@
 <!DOCTYPE html>
 <html>
-	        <head>
-			                <meta charset="UTF-8">
-					                <title>First webpage</title>
-
-							        </head>
-
-								        <body>
-										                <header>
-													                        <ul>
-																	                                <li><a href="./index.html">Index</a></li>
-																					                        </ul>
-																								                </header>
-																										                <main>
-																													                        <article>
-																																	                                <h1>HTML</h1>
-
-																																					                                <p>HTML is HyperText Markup Language</p>
-
-																																									                                <a><img src="https://www.holbertonschool.com/holberton-logo.png" alt="Hobelton" style="with:100px;height:100px;">Holberton</a>
-
-																																													                                <h2>What is the use of HTML</h2>
-
-																																																	                                <p>HTML is the language for describing the structure of Web pages.</p>
-
-																																																					                                <h3>Holberton School.com</h3>
-
-																																																									                                <p>Holberton School teaches students to think like programmers and helps students develop the soft skills needed to get noticed in interviews.</p>
-
-																																																													                                <p>Thank you</p>
-
-																																																																	                                <a href="./tweets.html">Tweets</a>
-																																																																					                        </article>
-																																																																								                        <aside>
-																																																																												                                <p>HTML is the skeleton of all modern web pages. Together with CSS and JavaScrJav, it forms the foundation of modern web development.</p>
-																																																																																                        </aside>
-																																																																																			                </main>
-																																																																																					                <footer>
-																																																																																								                        <p>One of my motivations to learn Web Development  is to get some HTML jokes I see in memes . Made by Erica-Livia Ingabire - <a href="www.google.com" target="_blank">here</a></p>
-																																																																																											                </footer>
-
-																																																																																													        </body>
-
-
+	<head>
+		<meta charset="UTF-8">
+		<title>First webpage</title>
+	</head>
+	
+	<body class="works_on_smartphone">
+		<header>
+			<a href="@" class="logo">&#10042;</a>>
+			<ul>
+				<li><a href="./index.html">Index</a></li>
+			</ul>
+		</header>
+		<main>
+			<article>
+				<h1>HTML</h1>
+				<p>HTML is HyperText Markup Language</p>
+				<a><img src="https://www.holbertonschool.com/holberton-logo.png" alt="Hobelton" style="with:100px;height:100px;">Holberton</a>
+				<h2>What is the use of HTML</h2>
+				<p>HTML is the language for describing the structure of Web pages.</p>
+				<h3>Holberton School.com</h3>
+				<p>Holberton School teaches students to think like programmers and helps students develop the soft skills needed to get noticed in interviews.</p>
+				<p>Thank you</p>
+				
+				<a href="./tweets.html">Tweets</a>
+			</article>
+			<aside>
+				<p>HTML is the skeleton of all modern web pages. Together with CSS and JavaScrJav, it forms the foundation of modern web development.</p>
+			</aside>
+		</main>
+		<footer>
+			<p>One of my motivations to learn Web Development  is to get some HTML jokes I see in memes . Made by Erica-Livia Ingabire - <a href="www.google.com" target="_blank">here</a></p>
+		</footer>
+	</body>
+	
 </html>
