--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -18,6 +18,42 @@
 			</div>
 		
 		</header>
+
+		<main>
+			<section>
+				<div>
+					<h1>Hello World</h1>
+					<p>The first C program in the book "The C Programming Language" was to print "hello world!" on the screen. Since then it is used as the first program to introduce the basic details of a programming language.</p>
+				<button>HELLO WORLD!</button>
+
+				<div>
+					<h2>HTML: HyperText Markup Language</h2>
+				</div>
+
+				<div>
+					<div>
+						<img src="file:///C:/Users/Lenovo/Downloads/download.jpg" alt="Graduation">
+						<h3>Graduation Party</h3>
+						<p>Graduation is the successful completion of a course of study at a university, college, or school, for which you receive a degree or diploma.</p>
+					</div>
+
+					<div>
+						<img src="file:///C:/Users/Lenovo/Downloads/crop.jpg" alt="crop">
+						<h3> Harley Quinn</h3>
+						<p>Harley Quinn is a character appearing in American comic books published by DC Comics. </p>
+					</div>
+
+					<div>
+						<img src="file:///C:/Users/Lenovo/Downloads/71ekIy1RVPL.jpg" alt="women">
+						<h3>Women Empowerment</h3>
+						<p>Women's empowerment can be defined to promoting women's sense of self-worth, their ability to determine their own choices, and their right to influence.</p>
+					</div>
+
+					<div>
+						<img src="file:///C:/Users/Lenovo/Downloads/pp.jpeg" alt="music">
+						<h3> Music Therapy</h3>
+						<p>Music Therapy is the clinical & evidence-based use of music interventions to accomplish individualized goals within a therapeutic relationship by a credentialed professional who has completed an approved music therapy program.</p>
+					</div>
 	
 	</body>
 
