--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -54,6 +54,27 @@
 						<h3> Music Therapy</h3>
 						<p>Music Therapy is the clinical & evidence-based use of music interventions to accomplish individualized goals within a therapeutic relationship by a credentialed professional who has completed an approved music therapy program.</p>
 					</div>
+				</div>
+
+			</section>
+
+			<section>
+
+				<div>
+					<img src="file:///C:/Users/Lenovo/Downloads/kgl.jpeg" alt="Kigali">
+					<div>
+						<blockquote>
+							&NestedLessLess; Hide yourself in God, so when a man wants to find you he will have to go there first. &NestedGreaterGreater;
+						</blockquote>
+						<p>Shannon L. Alder</p>
+						<p>Inspiration author</p>
+					</div>		
+					
+				</div>
+
+			</section>
+
+		</main>
 	
 	</body>
 
