--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -74,6 +74,58 @@
 
 			</section>
 
+			<section>
+
+				<h1>Videos</h1>
+				<div>
+					<div>
+						<img src="file:///C:/Users/Lenovo/Downloads/artificial-intelligence-2167835_1280.webp" alt="AI">
+						<h2 class="videotitle">Artificial Intelligence</h2>
+						<p class="video-desc">AI can meaningfully improve people's lives and that the biggest impact will come when everyone can access it.</p>
+						<div class="author">
+							<img src="file:///C:/Users/Lenovo/Downloads/carys.jpg" alt="carys">
+							<h3>Carys Craig</h3>
+					<!DOCTYPE html>
+					<html>
+						    <head>
+							            <meta charset="utf-8">
+								            <title>Hollaa</title>
+									            
+									        </head>
+										    
+										    <body>
+											            <p>Hello comment allez vous</p>
+												            <div>
+														                <blockquote>
+																	                        &NestedLessLess; Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's fun! &NestedGreaterGreater;
+																				            </blockquote>
+																					                <p>Person Name</p>
+																							            <p>weather presenter</p>
+																								            </div>										<div class="rating">
+																											                            <img src="svgs/Star_1.svg" alt="star">
+																														                            <img src="svgs/Star_1.svg" alt="star">
+																																	                            <img src="svgs/Star_1.svg" alt="star">
+																																				                            <img src="svgs/Star_1.svg" alt="star">
+																																							                            <img src="svgs/Star_5.svg" alt="star">
+																																										                            <p>8 min</p>
+																																													                        </div>
+																																																    </body>
+
+					</html>
+
+					</div>
+
+					<div>
+
+					</div>
+
+					<div>
+
+					</div>
+				</div>
+
+			</section>
+
 		</main>
 	
 	</body>
