--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -95,7 +95,22 @@
 							<img src="svgs/Star_5.svg" alt="star">
 							<p>ok</p>
 						</div>
-		
+					</div>
+
+					<div>
+						<img src="file:///C:/Users/Lenovo/Pictures/MEmu%20Photo/WhatsApp%20Image%202022-06-20%20at%205.41.58%20PM.jpeg" alt="image">
+						<h2 class="videotitle">ALU Rwanda Campus</h2>
+						<p>African Leadership University is a university built to educate the next generation of ethical and entrepreneurial leaders for the continent and the world.</p>
+						
+					</div>
+
+					<div>
+
+					</div>
+
+					<div>
+
+					</div>
 					
 				</div>
 
