--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -113,7 +113,9 @@
 							<p>ok</p>
 
 					<div>
-
+						<img src="file:///C:/Users/Lenovo/Downloads/hq.png" alt="hq">
+						<h2 class="videotitle">Birds of Prey</h2>
+						<p>The film "Birds of Prey" follows Harley Quinn, who, after breaking up with the Joker, is threatened by Gotham City crime lord Roman Sionis, and joins forces with Helena</p>
 					</div>
 					
 					<div class="rating">
@@ -124,7 +126,9 @@
 							<img src="svgs/Star_5.svg" alt="star">
 							<p>ok</p>
 					</div>
-
+						<img src="file:///C:/Users/Lenovo/Downloads/pp.jpg">
+						<h2 class="videotitle">Billie Eillish</h2>
+						<p>Billie Eilish, in full Billie Eilish Pirate Baird O'Connell, (born December 18, 2001, Los Angeles, California, U.S.), American singer-songwriter who first gained recognition in 2015 for the song “Ocean Eyes” and became, in 2020, the youngest person ever to win a Grammy for album of the year.</p>
 					<div>
 
 					</div>
