--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -22,9 +22,11 @@
 		<main>
 			<section>
 				<div>
-					<h1>Hello World</h1>
-					<p>The first C program in the book "The C Programming Language" was to print "hello world!" on the screen. Since then it is used as the first program to introduce the basic details of a programming language.</p>
-				<button>HELLO WORLD!</button>
+					<h1>Get Schooled</h1>
+					<p>
+						<span>SMILES</span> <span>GRIN</span> <span>LAUGH</span>
+					</p>
+				<button>Register for free</button>
 
 				<div>
 					<h2>HTML: HyperText Markup Language</h2>
